# error_log

./: CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  bacon.toml  justfile  spellcheck.toml  tarpaulin-report.html
.github/workflows/: coverage.yml  rust-clippy.yml  rust.yml  workflow.yml
docs/: book.toml
docs/src/: 1_1_no_std.md  1_intro.md  4_1_changelog.md  4_2_roadmap.md  SUMMARY.md  roadmap.md
examples/: async.rs
examples/anyhow/: Cargo.toml
examples/anyhow/src/: main.rs
examples/async/: Cargo.toml
examples/async/src/: main.rs
src/: display.rs  entry.rs  get.rs  helper.rs  lib.rs  macros.rs  manage.rs  manage_errors.rs  messages.rs  presets.rs  traits.rs
tests/: anyhow.rs  box.rs  deref.rs  general.rs  instant.rs  macro.rs  message.rs  native-dialog.rs  ui.rs  usage.rs
