[package]
name = "error_log"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", optional = true }
log = "0.4.17"

[features]

[workspace]
members = [
  "examples/*"
]

[package.metadata.spellcheck]
config = "spellcheck.toml"

[dev-dependencies]
anyhow = "1.0.69"
pretty_assertions = "1.3.0"
# trybuild = "1.0.77"
