[package]
name = "error_log"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", optional = true }
native-dialog = { version = "0.6.3", optional = true }
log = {version = "0.4.17", default-features = false }
time = { version = "0.3.20", features = ["local-offset"], optional = true }
libc-print = "0.1.21"

[features]
default =["std"]
std = ["time"]
native-dialog = ["dep:native-dialog","std"]

[workspace]
members = [
  "examples/*"
]

[package.metadata.spellcheck]
config = "spellcheck.toml"

[dev-dependencies]
anyhow = "1.0.70"
env_logger = "0.10.0"
native-dialog = "0.6.3"
pretty_assertions = "1.3.0"
# trybuild = "1.0.77"
