[package]
name = "error_log"
version = "0.1.2"
edition = "2021"
resolver = "2"

description = "Simple, struct-based Error-Handling" 
authors = ["LeSnake04"]
categories = ["no-std","rust-patterns"]
keywords = ["error-handling","error","log"]
repository = "https://github.com/LeSnake04/error_log" 
license = " Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "async"
required-features = ["anyhow"]

[[example]]
name = "anyhow"
required-features = ["anyhow"]


[dependencies]
anyhow = { version = "1.0.70", optional = true }
native-dialog = { version = "0.6.3", optional = true }
log = { version = "0.4.17", default-features = false }
time = { version = "0.3.20", features = ["formatting"], optional = true }
libc-print = "0.1.21"

[features]
anyhow = ["dep:anyhow","errors"]
default = ["std", "default-no-std"]
default-no-std = ["helper-traits","instant-display","messages", "errors"]
errors = []
helper-traits = ["errors"]
instant-display = []
messages = []
native-dialog = ["dep:native-dialog","std"]
std = ["time"]

[workspace]
members = [
  "examples/*"
]

[dev-dependencies]
anyhow = "1.0.70"
env_logger = "0.10.0"
native-dialog = "0.6.3"
pretty_assertions = "1.3.0"
tokio = { version = "1.27.0", features = ["full"] }
# trybuild = "1.0.77"
