[package]
name = "async_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error_log = {path = "../.." , version = "*", features = ["anyhow"]}
anyhow = "1.0.70"
tokio = {version = "1.27.0", features = ["full"]}
